--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+<title>موقع ادهم للصحة - ازاي اخس و ازاي اطخن بسهولة</title>
+<meta name="description" content="موقع ادهم للصحة يقدم نصائح فعالة عن انقاص الوزن وزيادته بطريقة صحية وسهلة.">
+<meta name="keywords" content="موقع ادهم للصحة, ازاي اخس, ازاي اطخن, الصحة, الرجيم, اللياقة, النظام الغذائي, نصائح صحية">
+<meta name="author" content="Adhamz">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>موقع أدهم الصحي — بحث غذائي مفتوح</title>
@@ -97,3 +101,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
