--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<title>موقع ادهم للصحة - ازاي اخس و ازاي اطخن بسهولة</title>
+<meta name="description" content="موقع أدهم للصحة يساعدك في معرفة الوزن المثالي، ونصائح لخسارة الوزن أو زيادته بطريقة صحية.">
+<meta name="keywords" content="ازاي اخس, ازاي اطخن, موقع ادهم للصحة, نصائح صحية, الوزن المثالي, تغذية صحية, رجيم صحي, زيادة الوزن, خسارة الوزن">
+<meta name="author" content="Adhamz">
+   <title>موقع ادهم للصحة - ازاي اخس و ازاي اطخن بسهولة</title>
 <meta name="description" content="موقع ادهم للصحة يقدم نصائح فعالة عن انقاص الوزن وزيادته بطريقة صحية وسهلة.">
 <meta name="keywords" content="موقع ادهم للصحة, ازاي اخس, ازاي اطخن, الصحة, الرجيم, اللياقة, النظام الغذائي, نصائح صحية">
 <meta name="author" content="Adhamz">
@@ -101,4 +104,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
